--- a/src/modules/Header/Header.scss
+++ b/src/modules/Header/Header.scss
@@ -1,3 +1,7 @@
-.makeStyle-title-3{
+.makeStyle-title-3 {
     background-color: red;
+}
+
+.MuiTypography-root {
+    margin-left:15px !important;
 }
